Added documentation and housekeeping